# python-ogn-client

./: .flake8  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTORS  OGN-Logger.pl  README.md  parser_v2_migration.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: ci.yaml  deploy.yaml  test.yaml
ogn/client/: __init__.py  client.py  settings.py
ogn/ddb/: __init__.py  utils.py
ogn/gateway/: client.py  settings.py
ogn/parser/: __init__.py  baseparser.py  exceptions.py  parse.py  parse_capture.py  parse_flarm.py  parse_lt24.py  parse_naviter.py  parse_ogn.py  parse_receiver.py  parse_skylines.py  parse_spider.py  parse_spot.py  parse_tracker.py  pattern.py  telnet_parser.py  utils.py
ogn/parser/aprs_comment/: base.py  fanet_parser.py  flarm_parser.py  generic_parser.py  inreach_parser.py  lt24_parser.py  microtrak_parser.py  naviter_parser.py  ogn_parser.py  receiver_parser.py  safesky_parser.py  skylines_parser.py  spider_parser.py  spot_parser.py  tracker_parser.py
tests/: valid_beacons.txt
tests/client/: test_AprsClient.py  test_TelnetClient.py  test_ognClient.py
tests/ddb/: test_utils.py
tests/gateway/: test_ognGateway.py
tests/parser/: test_aircraft_beacon.py  test_beacon.py  test_beacon_naviter.py  test_parse.py  test_parse_aprs.py  test_parse_capture.py  test_parse_fanet.py  test_parse_flarm.py  test_parse_generic.py  test_parse_inreach.py  test_parse_lt24.py  test_parse_microtrak.py  test_parse_naviter.py  test_parse_ogn_aircraft.py  test_parse_ogn_receiver.py  test_parse_receiver.py  test_parse_safesky.py  test_parse_skyline.py  test_parse_skylines.py  test_parse_spider.py  test_parse_spot.py  test_parse_telnet.py  test_parse_tracker.py  test_receiver_beacon.py  test_utils.py
tests/parser/parse/: test_comments.py  test_parse.py  test_position.py  test_position_weather.py  test_status.py
tests/parser/valid_beacon_data/: aprs.txt  aprs_aircraft.txt  aprs_receiver.txt  capturs.txt  fanet.txt  flarm.txt  flymaster.txt  inreach.txt  lt24.txt  microtrak.txt  naviter.txt  ogn_flarm.txt  ogn_tracker.txt  pilot_aware.txt  receiver.txt  skylines.txt  spider.txt  spot.txt  tracker.txt
tests/rust_migration/: __init__.py  test_benchmarks.py  test_migration.py
